feat(metadata & knowledge) : update