@@ -3,6 +3,7 @@ package com.poliwise.metadata.service;
 import com.poliwise.metadata.dto.CreateAccessRuleRequest;
 import com.poliwise.metadata.dto.AccessRuleResponse;
 import com.poliwise.metadata.entity.DocumentAccessRule;
+import com.poliwise.metadata.entity.DocumentMetadata;
 import com.poliwise.metadata.enums.UserRole;
 import com.poliwise.metadata.exception.ResourceNotFoundException;
 import com.poliwise.metadata.repository.DocumentAccessRuleRepository;
@@ -15,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class AccessRuleService {
@@ -38,23 +38,45 @@ public class AccessRuleService {
             throw new ResourceNotFoundException("Document metadata not found: " + metadataId);
         }
 
+        // Validate that at least one target is specified
+        if (request.targetType() == null || request.targetType().isBlank()) {
+            throw new IllegalArgumentException("Target type is required (ROLE, DEPARTMENT, USER)");
+        }
+
+        switch (request.targetType().toUpperCase()) {
+            case "ROLE" -> {
+                if (request.targetRole() == null) {
+                    throw new IllegalArgumentException("Role must be specified for ROLE target type");
+                }
+            }
+            case "DEPARTMENT" -> {
+                if (request.targetDepartmentId() == null) {
+                    throw new IllegalArgumentException("Department ID must be specified for DEPARTMENT target type");
+                }
+            }
+            case "USER" -> {
+                if (request.targetUserId() == null) {
+                    throw new IllegalArgumentException("User ID must be specified for USER target type");
+                }
+            }
+            default -> throw new IllegalArgumentException("Invalid target type: " + request.targetType() + ". Must be ROLE, DEPARTMENT, or USER");
+        }
+
         OffsetDateTime now = OffsetDateTime.now();
         DocumentAccessRule rule = DocumentAccessRule.builder()
                 .id(UUID.randomUUID())
                 .documentMetadataId(metadataId)
-                .targetType(request.targetType())
-                .targetRole(request.targetRole() != null
-                        ? UserRole.valueOf(request.targetRole())
-                        : null)
+                .targetType(request.targetType().toUpperCase())
+                .targetRole(request.targetRole() != null ? UserRole.valueOf(request.targetRole().toUpperCase()) : null)
                 .targetDepartmentId(request.targetDepartmentId())
                 .targetUserId(request.targetUserId())
-                .permission(request.permission())
+                .permission(request.permission() != null ? request.permission().toUpperCase() : "VIEW")
                 .createdBy(createdBy)
                 .createdAt(now)
                 .build();
 
         DocumentAccessRule saved = accessRuleRepository.save(rule);
-        log.info("Created access rule: id={}, metadataId={}", saved.getId(), metadataId);
+        log.info("Created access rule: id={}, metadataId={}, targetType={}", saved.getId(), metadataId, saved.getTargetType());
         return toResponse(saved);
     }
 
@@ -62,7 +84,14 @@ public class AccessRuleService {
         return accessRuleRepository.findByDocumentMetadataId(metadataId)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<AccessRuleResponse> getAll() {
+        return accessRuleRepository.findAll()
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Transactional
@@ -74,32 +103,131 @@ public class AccessRuleService {
         log.info("Deleted access rule: id={}", id);
     }
 
+    @Transactional
+    public void deleteByMetadataId(UUID metadataId) {
+        List<DocumentAccessRule> rules = accessRuleRepository.findByDocumentMetadataId(metadataId);
+        accessRuleRepository.deleteAll(rules);
+        log.info("Deleted {} access rules for metadata: {}", rules.size(), metadataId);
+    }
+
+    /**
+     * Check if user has access to a document at runtime.
+     * This method enforces ACL rules when users try to access documents.
+     * 
+     * Access check priority:
+     * 1. ADMIN always has access
+     * 2. DENY rules take precedence over VIEW rules
+     * 3. Specific rules (USER > DEPARTMENT > ROLE) take precedence over general rules
+     * 
+     * @param metadataId Document metadata ID
+     * @param userId User's UUID
+     * @param role User's role
+     * @param departmentId User's department UUID
+     * @return true if user has access, false otherwise
+     */
     public boolean hasAccess(UUID metadataId, UUID userId, UserRole role, UUID departmentId) {
-        // Check if document exists and is published
-        var metadata = metadataRepository.findById(metadataId).orElse(null);
-        if (metadata == null) return false;
+        // 1. ADMIN always has access
+        if (role == UserRole.ADMIN) {
+            log.debug("Admin always has access: metadataId={}", metadataId);
+            return true;
+        }
 
-        // Check access rules for this document
-        var rules = accessRuleRepository.findByDocumentMetadataId(metadataId);
+        // 2. Check if document exists and is published
+        DocumentMetadata metadata = metadataRepository.findById(metadataId).orElse(null);
+        if (metadata == null) {
+            log.warn("Document metadata not found: {}", metadataId);
+            return false;
+        }
 
-        for (var rule : rules) {
-            // Check user-specific access
-            if (rule.getTargetUserId() != null && rule.getTargetUserId().equals(userId)) {
-                return true;
+        // 3. PUBLIC documents are accessible to all authenticated users
+        if (metadata.getAccessLevel() != null && 
+            metadata.getAccessLevel().name().equals("PUBLIC")) {
+            log.debug("Public document: metadataId={}", metadataId);
+            return true;
+        }
+
+        // 4. Get access rules for this document
+        List<DocumentAccessRule> rules = accessRuleRepository.findByDocumentMetadataId(metadataId);
+        
+        if (rules.isEmpty()) {
+            // No rules = restricted (deny by default for non-public)
+            log.debug("No access rules, denying: metadataId={}", metadataId);
+            return false;
+        }
+
+        // 5. Check DENY rules first (DENY takes precedence)
+        boolean hasExplicitDeny = checkDenyRules(rules, userId, role, departmentId);
+        if (hasExplicitDeny) {
+            log.debug("User explicitly denied: metadataId={}, userId={}", metadataId, userId);
+            return false;
+        }
+
+        // 6. Check VIEW rules
+        boolean hasViewAccess = checkViewRules(rules, userId, role, departmentId);
+        if (hasViewAccess) {
+            log.debug("User granted view access: metadataId={}, userId={}", metadataId, userId);
+            return true;
+        }
+
+        // 7. Default deny
+        log.debug("No matching rules, denying: metadataId={}, userId={}", metadataId, userId);
+        return false;
+    }
+
+    private boolean checkDenyRules(List<DocumentAccessRule> rules, UUID userId, UserRole role, UUID departmentId) {
+        for (DocumentAccessRule rule : rules) {
+            if (!"DENY".equalsIgnoreCase(rule.getPermission())) {
+                continue;
             }
 
-            // Check department access
-            if (rule.getTargetDepartmentId() != null && rule.getTargetDepartmentId().equals(departmentId)) {
-                return true;
-            }
-
-            // Check role access
-            if (rule.getTargetRole() != null && rule.getTargetRole().equals(role)) {
+            if (matchesRule(rule, userId, role, departmentId)) {
                 return true;
             }
         }
-
         return false;
+    }
+
+    private boolean checkViewRules(List<DocumentAccessRule> rules, UUID userId, UserRole role, UUID departmentId) {
+        for (DocumentAccessRule rule : rules) {
+            if (!"VIEW".equalsIgnoreCase(rule.getPermission())) {
+                continue;
+            }
+
+            if (matchesRule(rule, userId, role, departmentId)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private boolean matchesRule(DocumentAccessRule rule, UUID userId, UserRole role, UUID departmentId) {
+        switch (rule.getTargetType().toUpperCase()) {
+            case "USER" -> {
+                return rule.getTargetUserId() != null && rule.getTargetUserId().equals(userId);
+            }
+            case "DEPARTMENT" -> {
+                return rule.getTargetDepartmentId() != null && 
+                       departmentId != null && 
+                       rule.getTargetDepartmentId().equals(departmentId);
+            }
+            case "ROLE" -> {
+                return rule.getTargetRole() != null && rule.getTargetRole().equals(role);
+            }
+            default -> {
+                log.warn("Unknown target type in rule {}: {}", rule.getId(), rule.getTargetType());
+                return false;
+            }
+        }
+    }
+
+    /**
+     * Filter document IDs based on user's access rights.
+     * Used for filtering document lists.
+     */
+    public List<UUID> filterAccessibleDocuments(List<UUID> metadataIds, UUID userId, UserRole role, UUID departmentId) {
+        return metadataIds.stream()
+                .filter(id -> hasAccess(id, userId, role, departmentId))
+                .toList();
     }
 
     private AccessRuleResponse toResponse(DocumentAccessRule rule) {
